--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "generate-prettierignore": "cp .gitignore .prettierignore && cat .part.prettierignore >> .prettierignore",
     "generate-data": "ts-node scripts/src/generate-data.mts",
     "cms-server": "npx decap-server",
-    "prebuild": "npm run generate-image-lists && npm run generate-data"
+    "prebuild": "npm run generate-image-lists && npm run generate-data",
+    "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js"
   },
   "private": true,
   "dependencies": {
