feat(deploy): configure Cloudflare Pages to return 404

--- a/.ci/Makefile
+++ b/.ci/Makefile
@@ -5,6 +5,7 @@ prebuild:
 
 build: prebuild
 	npm run prerender
+	npm run postbuild
 
 install:
   # So @ngaox/seo installs (declares peer dep of Angular 15)
