--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "generate-content": "ts-node scripts/src/generate-content.mts",
     "cms-server": "npx decap-server",
     "prebuild": "npm run generate-image-lists && npm run generate-content",
-    "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js"
+    "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
+    "postbuild": "cp dist/chrislb/browser/404/index.html dist/chrislb/browser/content/404.html"
   },
   "private": true,
   "dependencies": {
