--- a/.gitignore
+++ b/.gitignore
@@ -381,7 +381,9 @@ src/content/**/*-images.json
 src/data/*.json
 src/data/**/*-images.json
 src/data/images/*.json
+routes-file.txt
 # Manual edit
 # - Remove .idea from Angular. We want some IDE settings!
 # - Add generated JSON lists
 # - Add generated image lists
+# - Add generated route file
